--- a/views/diceRoller.ejs
+++ b/views/diceRoller.ejs
@@ -1,4 +1,5 @@
-<%- include('../partials/header') %>
+<!-- inclus le fichier header.ejs du dossier partials -->
+<%- include('./partials/header') %>
 
   <h3>Dice Roller</h3>
 
