--- a/views/fourchette.ejs
+++ b/views/fourchette.ejs
@@ -1,4 +1,5 @@
-<%- include('../partials/header') %>
+<!-- inclus le fichier header.ejs du dossier partials -->
+<%- include('./partials/header') %>
 
   <h3>Jeu De La Fouchette</h3>
 
