--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
-<%- include('../partials/header') %>
+<!-- inclus le fichier header.ejs du dossier partials -->
+<%- include('./partials/header') %>
 
     <main>
       <h3>Index</h3>
