ajout reset.css

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>GameHub</title>
+    <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/style.css">
     <!--  si le type de jeu est différent d'"undefined" 
           et si le cssFile de l'objet lauchedGame n'est pas null
